# NeuroFormer-EEG-Motor-Imagery-Decoding-using-Transformers

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
assets/results/: eegnet_subject_dependent_results.json  evaluation_results.json
configs/: eeg_cross_subject.yaml  eeg_subject_dependent.yaml  transformer_base.yaml
notebooks/: 01_transformer_walkthrough.ipynb  02_eeg_data_exploration.ipynb  03_training_analysis.ipynb  04_attention_visualization.ipynb
scripts/: demo.py  run_evaluation.py  train_eeg.py  train_translation.py
src/eeg/: __init__.py  augmentation.py  dataset.py  preprocessing.py  tokenizer.py
src/models/: __init__.py  baselines.py  eeg_transformer.py
src/training/: __init__.py  losses.py  metrics.py  scheduler.py  trainer.py
src/transformer/: __init__.py  attention.py  decoder.py  embeddings.py  encoder.py  feed_forward.py  transformer.py  utils.py
src/visualization/: __init__.py  attention_maps.py  eeg_plots.py  training_curves.py
tests/: test_attention.py  test_eeg_pipeline.py  test_encoder_decoder.py  test_masking.py
